Initial port of ActionCable to ES6

--- a/package.json
+++ b/package.json
@@ -48,6 +48,10 @@
     "ember-cli-babel": "^5.1.6"
   },
   "ember-addon": {
-    "configPath": "tests/dummy/config"
+    "configPath": "tests/dummy/config",
+    "before": [ ],
+    "defaultBlueprint": "",
+    "demoURL": "",
+    "after": [ ]
   }
 }
